# 5-8AttachedProperties

./: README.adoc
AttachedProperties/: CMakeLists.txt
AttachedProperties/main/: CMakeLists.txt
AttachedProperties/main/inc/: timer.hpp
AttachedProperties/main/qml/: Main.qml
AttachedProperties/main/src/: main.cpp  person.cpp  timer.cpp  timerattached.cpp
