set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick QuickControls2)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(appAttachedProperties
    ./src/main.cpp
)

qt_add_qml_module(appAttachedProperties
    URI AttachedProperties
    VERSION 1.0
    QML_FILES
        ./qml/Main.qml
        SOURCES
        SOURCES inc/person.hpp src/person.cpp
        SOURCES inc/timer.hpp src/timer.cpp
        SOURCES inc/timerattached.hpp src/timerattached.cpp
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appAttachedProperties PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appAttachedProperties
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_include_directories(appAttachedProperties PUBLIC ./inc/)

target_link_libraries(appAttachedProperties
    PRIVATE Qt6::Quick Qt6::QuickControls2
)

include(GNUInstallDirs)
install(TARGETS appAttachedProperties
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
